Support for deleteing applications
